<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LogFragment">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="top"
        android:padding="16dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/logRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="top"
            android:layout_marginTop="16dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical"
            android:layout_gravity="top"
            android:gravity="bottom"
            >
<!--            <Button-->
<!--                android:id="@+id/dummyLogButton"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Dummy Log"-->
<!--                android:layout_margin="4dp"/>-->
            <Button
                android:id="@+id/syncLogButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sync_log"
                android:layout_margin="4dp"/>
            <Button
                android:id="@+id/clearLogButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear_log"
                android:layout_margin="4dp"/>
            <Button
                android:id="@+id/goWebButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/more_details"
                android:layout_margin="4dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>