<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AccountFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/welcome_to_bpsd_warning_app"
            android:textAlignment="center"
            android:textSize="25sp"
            />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email: "
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="15sp" />

<!--        <TextView-->
<!--            android:id="@+id/DeviceTextView"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Device: "-->
<!--            android:layout_marginStart="8dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:layout_marginEnd="8dp"-->
<!--            android:textAlignment="center"-->
<!--            android:textSize="15sp" />-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/device_dropdown_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"
            android:hint="@string/select_device"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/device_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:padding="12dp"
                android:focusable="false"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>
<!--    Add a button to log out at the bottom of the screen-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        >
    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_gravity="center"
        android:text="@string/logout" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>